--- a/src/index.html
+++ b/src/index.html
@@ -17,85 +17,253 @@
                 margin: 24px;
                 display: flex;
                 flex-direction: column;
-                gap: 16px;
+                gap: 20px;
+            }
+
+            .section {
+                display: flex;
+                flex-direction: column;
+                gap: 8px;
+            }
+
+            .section-title {
+                font-size: 14px;
+                font-weight: 600;
+                color: var(--spectrum-global-color-gray-800);
+                margin: 0;
+            }
+
+            .helper-text {
+                font-size: 12px;
+                color: var(--spectrum-global-color-gray-700);
+                margin: 0;
+                margin-top: -4px;
+            }
+
+            #fileInputWrapper {
+                position: relative;
+                width: 100%;
+            }
+
+            #imageUpload {
+                position: absolute;
+                opacity: 0;
+                width: 0;
+                height: 0;
+                overflow: hidden;
             }
 
             #colorBar {
                 width: 100%;
-                height: 60px;
+                height: 70px;
                 display: flex;
-                border-radius: 4px;
+                border-radius: 8px;
                 overflow: hidden;
-                border: 1px solid rgba(0, 0, 0, 0.1);
+                border: 2px solid rgba(0, 0, 0, 0.08);
+                box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+                gap: 2px;
+                padding: 2px;
+                background: rgba(0, 0, 0, 0.02);
             }
 
             .color-segment {
+                height: calc(100% - 4px);
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                color: white;
+                font-size: 11px;
+                font-weight: 600;
+                text-shadow: 0 1px 2px rgba(0, 0, 0, 0.6);
+                transition: all 0.25s cubic-bezier(0.4, 0, 0.2, 1);
+                cursor: pointer;
+                position: relative;
+                border-radius: 6px;
+                overflow: hidden;
+                min-width: 50px;
+            }
+
+            .color-segment:hover {
+                transform: translateY(-2px);
+                box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+                z-index: 2;
+            }
+
+            .color-segment.selected {
+                outline: 3px solid var(--spectrum-global-color-blue-500);
+                outline-offset: -2px;
+                transform: translateY(-2px) scale(1.02);
+                box-shadow: 0 4px 12px rgba(20, 115, 230, 0.4);
+                z-index: 3;
+            }
+
+            .color-label {
+                position: absolute;
+                top: 4px;
+                left: 4px;
+                right: 4px;
+                background: rgba(0, 0, 0, 0.7);
+                backdrop-filter: blur(4px);
+                color: white;
+                font-size: 10px;
+                font-weight: 700;
+                padding: 2px 6px;
+                border-radius: 4px;
+                text-align: center;
+                text-shadow: none;
+                pointer-events: none;
+                opacity: 0;
+                transform: translateY(-4px);
+                transition: all 0.25s cubic-bezier(0.4, 0, 0.2, 1);
+            }
+
+            .color-segment.selected .color-label {
+                opacity: 1;
+                transform: translateY(0);
+            }
+
+            .swap-section {
+                display: flex;
+                flex-direction: column;
+                gap: 12px;
+                padding: 16px;
+                background: var(--spectrum-global-color-gray-50);
+                border-radius: 8px;
+                border: 1px solid rgba(0, 0, 0, 0.08);
+            }
+
+            .swap-preview-container {
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                gap: 16px;
+                padding: 12px 0;
+            }
+
+            .swap-preview-box {
+                width: 80px;
+                height: 80px;
+                border-radius: 8px;
+                border: 2px solid rgba(0, 0, 0, 0.15);
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                justify-content: center;
+                background: white;
+                transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+                position: relative;
+                overflow: hidden;
+            }
+
+            .swap-preview-box.has-color {
+                border-color: var(--spectrum-global-color-blue-500);
+                box-shadow: 0 2px 8px rgba(20, 115, 230, 0.2);
+            }
+
+            .swap-preview-color {
+                width: 100%;
                 height: 100%;
                 display: flex;
                 align-items: center;
                 justify-content: center;
                 color: white;
-                font-size: 12px;
-                font-weight: bold;
-                text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
-                transition: opacity 0.2s, transform 0.2s;
-                cursor: pointer;
-                position: relative;
+                font-size: 10px;
+                font-weight: 600;
+                text-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
             }
 
-            .color-segment:hover {
-                opacity: 0.9;
-            }
-
-            .color-segment.selected {
-                outline: 3px solid #1473e6;
-                outline-offset: -3px;
-                transform: scale(1.05);
-                z-index: 1;
-            }
-
-            input[type="file"] {
-                width: 100%;
-                padding: 8px;
-                border: 1px solid rgba(0, 0, 0, 0.1);
-                border-radius: 4px;
-            }
-
-            #importButton {
-                width: 100%;
-                padding: 10px 16px;
-                background-color: #1473e6;
+            .swap-preview-label {
+                position: absolute;
+                bottom: 0;
+                left: 0;
+                right: 0;
+                background: rgba(0, 0, 0, 0.7);
                 color: white;
-                border: none;
-                border-radius: 4px;
-                font-size: 14px;
-                font-weight: 500;
-                cursor: pointer;
-                transition: background-color 0.2s;
+                font-size: 10px;
+                font-weight: 600;
+                padding: 4px;
+                text-align: center;
             }
 
-            #importButton:hover {
-                background-color: #0d66d0;
+            .swap-arrow {
+                font-size: 24px;
+                color: var(--spectrum-global-color-gray-600);
+                transition: transform 0.3s cubic-bezier(0.4, 0, 0.2, 1);
             }
 
-            #importButton:active {
-                background-color: #095aba;
+            .swap-preview-container.has-colors .swap-arrow {
+                color: var(--spectrum-global-color-blue-500);
+                transform: scale(1.1);
             }
 
-            #importButton:disabled {
-                background-color: #ccc;
-                cursor: not-allowed;
+            .swap-helper-text {
+                font-size: 11px;
+                color: var(--spectrum-global-color-gray-600);
+                text-align: center;
+                margin-top: -8px;
+                transition: opacity 0.2s;
+            }
+
+            .swap-button-wrapper {
+                display: flex;
+                flex-direction: column;
+                gap: 6px;
+            }
+
+            #swapButton {
+                width: 100%;
+            }
+
+            #imagePreview {
+                border-radius: 8px;
+                box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+                border: 1px solid rgba(0, 0, 0, 0.08);
             }
         </style>
     </head>
     <body>
         <sp-theme system="express" color="light" scale="medium">
             <div class="container">
-                <sp-field-label for="imageUpload">Upload Image</sp-field-label>
-                <input type="file" id="imageUpload" accept="image/*" />
-                <button id="importButton" type="button">Import img to page</button>
-                <div id="colorBar"></div>
-                <sp-button id="swapButton" variant="primary" disabled>Swap Colors</sp-button>
+                <!-- Upload Section -->
+                <div class="section">
+                    <sp-field-label for="filePickerButton">Upload Image</sp-field-label>
+                    <p class="helper-text">Upload an image to extract its dominant colors</p>
+                    <div id="fileInputWrapper">
+                        <input type="file" id="imageUpload" accept="image/*" />
+                        <sp-button id="filePickerButton" variant="primary" style="width: 100%">
+                            Choose File
+                        </sp-button>
+                    </div>
+                    <sp-button id="importButton" variant="secondary" style="width: 100%; margin-top: 8px;">
+                        Import to Document
+                    </sp-button>
+                </div>
+
+                <!-- Color Palette Section -->
+                <div class="section">
+                    <h3 class="section-title">Dominant Colors</h3>
+                    <div id="colorBar"></div>
+                </div>
+
+                <!-- Swap Section -->
+                <div class="swap-section">
+                    <h3 class="section-title" style="margin: 0;">Swap Colors</h3>
+                    <div class="swap-preview-container" id="swapPreviewContainer">
+                        <div class="swap-preview-box" id="color1Preview">
+                            <div class="swap-preview-label">Color 1</div>
+                            <div class="swap-preview-placeholder" style="color: var(--spectrum-global-color-gray-500); font-size: 10px; padding: 8px;">Select</div>
+                        </div>
+                        <div class="swap-arrow">↔</div>
+                        <div class="swap-preview-box" id="color2Preview">
+                            <div class="swap-preview-label">Color 2</div>
+                            <div class="swap-preview-placeholder" style="color: var(--spectrum-global-color-gray-500); font-size: 10px; padding: 8px;">Select</div>
+                        </div>
+                    </div>
+                    <div class="swap-button-wrapper">
+                        <sp-button id="swapButton" variant="primary" disabled>Swap Colors</sp-button>
+                        <p class="swap-helper-text" id="swapHelperText">Select two colors to enable swapping</p>
+                    </div>
+                </div>
             </div>
         </sp-theme>
         <script type="module" src="add-on-console-override.js"></script>
